--- a/Code/server/package.json
+++ b/Code/server/package.json
@@ -10,6 +10,8 @@
   "license": "ISC",
   "dependencies": {
     "@grpc/grpc-js": "^1.6.8",
-    "@grpc/proto-loader": "^0.7.0"
+    "@grpc/proto-loader": "^0.7.0",
+    "eventsource": "^2.0.2",
+    "grpc-web": "^1.5.0"
   }
 }
